finish project. align & justify all items correct

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -3,15 +3,17 @@
   flex-direction: row;
   font-family: monospace;
   background: papayawhip;
+  align-items: center;
 }
 
 .logo {
-  align-self: center;
+  display: flex;
   font-size: 48px;
   font-weight: 900;
   color: tomato;
   background: white;
-  padding: 4px 32px;
+  padding: 4px;
+  margin: 10px;
 }
 
 ul {
@@ -20,6 +22,7 @@ ul {
   display: flex;
   padding: 0px;
   margin: 0px;
+  justify-content: space-evenly;
 }
 
 
@@ -28,6 +31,17 @@ a {
   font-size: 22px;
   background: white;
   padding: 8px;
+  margin-right: 10px;
+  margin-left: 10px;
   /* this removes the line under the links */
   text-decoration: none;
+  display: flex;
+}
+
+.left-links {
+  margin-right: auto;
+}
+
+.right-links {
+  margin-left: auto;
 }
